# SimEx

./: .gitignore  CMakeLists.txt  Makefile  README.md  order_sending_cli.cpp
bench/: add_order_bench.cpp
cmake/: AddGitSubmodule.cmake  CPM.cmake
config/: app.ini
generator/: main.cpp
include/boost/lockfree/: spsc_queue.hpp
include/core/: Order.h  OrderArena.h  OrderBook.h  OrderBookManager.h  OrderBookObserver.h  OrderBuilder.h  PriceLevel.h  SideContainer.h  TradeEvent.h
include/datastructures/: PriceRingBuffer.h  RBTree.h  SPSCQueue.h
include/ingress/: MCastSocket.h  McastSocket.h  OrderDispatcher.h  SocketUtils.h  WireOrder.h
include/snapshot/: SnapshotLayout.h  SnapshotPublisher.h
include/strategies/: FillOrKillStrategy.h  IcebergStrategy.h  ImmediateOrCancelStrategy.h  MarketStrategy.h  MatchingStrategy.h  PriceTimeStrategy.h
include/types/: AppTypes.h  OrderRequest.h  OrderSide.h  OrderType.h
include/utils/: Affinity.h  CompilerHints.h  Config.h  LatencyStats.h  LogMacros.h  Logger.h  Macros.h  MemPool.h  TimeUtils.h
research/: README.md  generate_market_data.py  generate_trade_matching.py  generate_trades.py
src/: book.cpp  main.cpp
src/core/: CMakeLists.txt  Logger.cpp  Order.cpp  OrderArena.cpp  OrderBook.cpp  OrderBookManager.cpp  PriceLevel.cpp  PriceRingBuffer.cpp
src/ingress/: CMakeLists.txt  McastSocket.cpp  OrderDispatcher.cpp  mcast_socket.cpp
src/observers/: CMakeLists.txt
src/snapshot/: CMakeLists.txt  SnapshotPublisher.cpp
src/strategies/: CMakeLists.txt  FillOrKillStrategy.cpp  IcebergStrategy.cpp  ImmediateOrCancelStrategy.cpp  MarketStrategy.cpp  PriceTimeStrategy.cpp
src/utils/: Affinity.cpp  CMakeLists.txt  Config.cpp  Logger.cpp
tests/: OrderBookTest.cpp
